--- a/Makefile.header
+++ b/Makefile.header
@@ -112,6 +112,15 @@ $(error ARCHI cannot be set)
 endif
 
 ###################################################
+# echo -e command (not supported by Mac OS X)
+#
+ifeq ($(ARCHI),Windows)
+ECHO_COLOR = 'echo -e'
+else
+ECHO_COLOR = echo
+endif
+
+###################################################
 # Temporary directory
 #
 ifeq ($(ARCHI),Darwin)
