--- a/Makefile.footer
+++ b/Makefile.footer
@@ -104,13 +104,23 @@ $(PKG_FILE): $(MYMAKEFILES) VERSION
 # Download external github code source needed by this project.
 .PHONY: download-external-libs
 download-external-libs:
-	@(cd $(THIRDPART) && ./download-external-libs.sh $(ARCHI) $(TARGET))
+	@if [ -e "$(THIRDPART)/download-external-libs.sh" ] ; then \
+	(cd $(THIRDPART) && ./download-external-libs.sh $(ARCHI) $(TARGET)); \
+	else \
+	$(ECHO_COLOR) "  \033[33m:( \033[36mMissing file $(THIRDPART)/download-external-libs.sh \033[33m:("; \
+	$(ECHO_COLOR) "  \033[33m:) \033[36mOr no external libs to download ! \033[33m:)\033[00m"; \
+	fi
 
 ###################################################
 # Compile external projects needed.
 .PHONY: compile-external-libs
 compile-external-libs:
-	@(cd $(THIRDPART) && ./compile-external-libs.sh $(ARCHI) $(TARGET))
+	@if [ -e "$(THIRDPART)/compile-external-libs.sh" ] ; then \
+	(cd $(THIRDPART) && ./compile-external-libs.sh $(ARCHI) $(TARGET)); \
+	else \
+	$(ECHO_COLOR) "  \033[33m:( \033[36mMissing file $(THIRDPART)/compile-external-libs.sh \033[33m:("; \
+	$(ECHO_COLOR) "  \033[33m:) \033[36mOr no external libs to download ! \033[33m:)\033[00m"; \
+	fi
 
 ###################################################
 # Run the binary
