--- a/Makefile.header
+++ b/Makefile.header
@@ -81,6 +81,10 @@ AR ?= ar
 ARFLAGS ?= crs
 
 ###################################################
+# Generated file holding project information
+PROJECT_INFO ?= project_info.hpp
+
+###################################################
 # Check if some variables have been defined
 #
 ifndef PROJECT
