--- a/Makefile.footer
+++ b/Makefile.footer
@@ -110,7 +110,7 @@ compile-external-libs:
 	(cd $(THIRDPART) && ./compile-external-libs.sh $(ARCHI) $(TARGET)); \
 	else \
 	$(ECHO_COLOR) "  \033[33m:( \033[36mMissing file $(THIRDPART)/compile-external-libs.sh \033[33m:("; \
-	$(ECHO_COLOR) "  \033[33m:) \033[36mOr no external libs to download ! \033[33m:)\033[00m"; \
+	$(ECHO_COLOR) "  \033[33m:) \033[36mOr no external libs to compile ! \033[33m:)\033[00m"; \
 	fi
 
 ###################################################
