Fix "Unknown option -ldw"

--- a/Makefile.flags
+++ b/Makefile.flags
@@ -201,7 +201,7 @@ VPATH += $(BUILD)/backward-cpp
 DEFINES += -DBACKWARD_HAS_DW=1 -DBACKWARD_HAS_BFD=0 -DBACKWARD_HAS_DWARF=0
 DEFINES += -DBACKWARD_HAS_UNWIND=1 -DBACKWARD_HAS_BACKTRACE=0
 DEFINES += -DBACKWARD_HAS_BACKTRACE_SYMBOL=1
-PKG_LIBS += -ldw
+LINKER_FLAGS += -ldw
 endif
 
 ###################################################
